# hyperCommander

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeUserPresets.json  HyperCommander.sln  README.md
HyperCommander/: CMakeLists.txt  HyperCommander.cpp  HyperCommander.hpp  HyperCommander.qrc  HyperCommander.rc  HyperCommander.sample.ini  HyperCommander.vcxproj  HyperCommander.vcxproj.filters  cmnConfig.hpp  cpp.hint  main.cpp  resource.h  stdafx.h
HyperCommander/Modules/: mdlFileEngine.cpp  mdlFileEngine.hpp  mdlFileModel.cpp  mdlFileModel.hpp  mdlFileOperation.cpp  mdlFileOperation.hpp  mdlFileSystem.cpp  mdlFileSystem.hpp
HyperCommander/UIs/: cmnUiUtils.cpp  cmnUiUtils.hpp  cmpPanel.cpp  cmpPanel.hpp  cmpPanel.ui  cmpViewer.cpp  cmpViewer.hpp  cmpViewer.ui  dlgCopyToAnother.cpp  dlgCopyToAnother.ui  dlgDefaultCMD.cpp  dlgDefaultCMD.hpp  dlgDefaultCMD.ui  dlgExternalConfigure.cpp  dlgExternalConfigure.hpp  dlgExternalConfigure.ui  dlgExternalConfigure_Item.cpp  dlgExternalConfigure_Item.hpp  dlgExternalConfigure_Item.ui  dlgFavoriteDir.cpp  dlgFavoriteDir.hpp  dlgFavoriteDir.ui  dlgGridStyle.cpp  dlgGridStyle.hpp  dlgGridStyle.ui  dlgMain.cpp  dlgMain.hpp  dlgMain.ui  dlgMultiRename.cpp  dlgMultiRename.hpp  dlgMultiRename.ui  dlgMultiRename_Model.cpp  dlgMultiRename_Model.hpp  dlgOpts.cpp  dlgOpts.hpp  dlgOpts.ui  dlgViewer.cpp  dlgViewer.hpp  dlgViewer.ui
HyperCommander/UIs/Cate - FileOperation/: dlgCreateDirectory.cpp  dlgCreateDirectory.hpp  dlgCreateDirectory.ui  dlgFileAttrib.cpp  dlgFileAttrib.hpp  dlgFileAttrib.ui  dlgFileCopy.cpp  dlgFileCopy.hpp  dlgFileCopy.ui  dlgFileDelete.cpp  dlgFileDelete.hpp  dlgFileDelete.ui  dlgFileMove.cpp  dlgFileMove.hpp  dlgFileMove.ui  dlgFileProgress.cpp  dlgFileProgress.hpp  dlgFileProgress.ui
HyperCommander/UIs/Components/: cmpView.cpp  cmpView.hpp
HyperCommander/UniqueLibs/: uiComboBoxWidget.cpp  uiComboBoxWidget.hpp
HyperCommanderAdmin/: CMakeLists.txt  cmnConfig.hpp  main.cpp  main.hpp  stdafx.h
UniqueLibs/: SHChangeNotify.cpp  SHChangeNotify.hpp  backgroundJobMgr.cpp  backgroundJobMgr.hpp  build.common.cmake  build.common.props  build.version.cmake  build.version.props  builtInFsModel.cpp  builtInFsModel.hpp  builtInVolumeModel.cpp  builtInVolumeModel.hpp  cmnHCModelUtils.cpp  cmnHCModelUtils.hpp  cmnHCUtils.cpp  cmnHCUtils.hpp  cmnTypeDefs.hpp  cmnTypeDefs_Name.hpp  cmnTypeDefs_Opts.cpp  cmnTypeDefs_Opts.hpp  colorSchemeMgr.cpp  colorSchemeMgr.hpp  columnMgr.cpp  columnMgr.hpp  column_Defs.hpp  commandMgr.cpp  commandMgr.hpp  commandMgr_Defs.hpp  externalEditorMgr.cpp  externalEditorMgr.hpp  fileSetMgr.cpp  fileSetMgr.hpp  internalViewerMgr.cpp  internalViewerMgr.hpp  model_defs.cpp  model_defs.hpp  pixmapCacheEx.cpp  pixmapCacheEx.hpp  shortcutMgr.cpp  shortcutMgr.hpp  (+6 more)
commonLibs/: CMakeLists.txt  cmnBase.hpp  cmnCompilerDetection.hpp  cmnConcurrent.cpp  cmnConcurrent.hpp  cmnContainers.hpp  cmnContainers_mpmc_bounded_q.hpp  cmnDateTime.cpp  cmnDateTime.hpp  cmnIncludeLibrary.hpp  cmnOAL_Defs.hpp  cmnPath.cpp  cmnPath.hpp  cmnProcess.cpp  cmnProcess.hpp  cmnSecurity.cpp  cmnSecurity.hpp  cmnSystemDetection.hpp  cmnTextUtils.cpp  cmnTextUtils.hpp  cmnTypes.hpp  cmnUtils.cpp  cmnUtils.hpp  commonLibs.cmake
commonLibs/Qt/: cmnQtDelegator.hpp  cmnQtUtils.cpp  cmnQtUtils.hpp
commonLibs/concurrent/: cmnConditionVariable.cpp  cmnConditionVariable.hpp  cmnMutex.cpp  cmnMutex.hpp  cmnSingleton.hpp
commonLibs/ipc/: ipc.cpp  ipc.hpp
commonLibs/logging/: cmnLogger_Defs.hpp
commonLibs/win/: winLIBMgr.hpp  winUtils.cpp  winUtils.hpp
commonLibs/win32api/: W32API_CmnDefs.hpp  W32API_NtDll.hpp  W32API_NtDll_Defs.hpp
documentation/: fsplugin.chm  pkplugin.chm
documentation/source/: conf.py  index.rst  modules.rst
externalLibs/: CustomQt.natvis  buildExternalLibs.cmd  clearBuildResults.cmd  externalLibs.cmake  importQTLibs.props
externalLibs/Everything/script/: EverythingSDK.props
externalLibs/QDirectoryEdit/: QDirectoryEdit.cpp  QDirectoryEdit.hpp
externalLibs/TotalCommander/: tc_listplug.h
externalLibs/buildTools/: setBuildTools.cmd  setQTDIROnENVs.cmd  setVC_TargetXP.cmd
